<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:contentDescription="@string/hello"
    android:gravity="start|top"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="30dp"
    android:paddingEnd="30dp"
    android:translationX="@dimen/cardview_compat_inset_shadow"
    tools:context=".QuizActivity"
    tools:paddingBottom="1dp">


    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="0.01"
        android:max="100"
        tools:background="#575757" />

    <TextView
        android:id="@+id/question_Text_View"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="#065C41"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:padding="30dp"
        android:text="@string/hello"
        android:textColor="#FFEB3B"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/promptButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:text="@string/promptButton"
        android:textColor="@color/black"
        app:backgroundTint="#FF5722" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/trueButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:text="@string/trueButton"
            android:textColor="@color/black"
            app:backgroundTint="#1AFF00"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/falseButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:text="@string/falseButton"
            android:textColor="@color/black"
            app:backgroundTint="#FF0000"
            tools:ignore="TextContrastCheck" />
    </TableRow>

    <TableRow
        android:id="@+id/blankSpaceForPopUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05" />

    <Button
        android:id="@+id/nextButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:background="#5A00FF"
        android:gravity="center"
        android:text="@string/nextButton"
        android:textColor="#FFFFFF" />

</LinearLayout>